--- a/src/config/sidebar.yml
+++ b/src/config/sidebar.yml
@@ -41,4 +41,4 @@
 - label: Community
   items:
     - label: 'Github'
-      link: https://github.com/
+      link: https://github.com/yahoor1/pico-8-docs
